# pathfinding_test_assignment

./: .clang-format  CMakeLists.txt  README.md  debug_helpers.py  pathfinding_test_assignment.qrc  pathfinding_test_assignment_ru_RU.ts
Headers/: Cell.hxx  CellContainers.hxx  CellsNumberValidator.hxx  Graph.hxx  MainWindow.hxx  MatrixCell.hxx  MatrixRectItem.hxx  MatrixScene.hxx  PathfindScene.hxx  Settings.hxx  Tracer.hxx  ZoomView.hxx
Sources/: Graph.cxx  Graph_DFS.cxx  Main.cxx  MainWindow.cxx  MatrixCell.cxx  MatrixScene.cxx  PathfindScene.cxx  Settings.cxx  Tracer.cxx  Tracer_BFS.cxx  Tracer_DFS.cxx  ZoomView.cxx
Tests/: CMakeLists.txt  DFS_Nodes_Test.cxx  RouteTest.hxx
Tests/Headers/: GraphTest.hxx  TracerTest.hxx
Tests/Sources/: GraphTest_DFS.cxx  RouteTest_DFS.cxx  TracerTest_BFS.cxx  TracerTest_DFS.cxx
UI/: MainWindow.ui
